--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-native-community/netinfo": "^9.3.7",
     "aws-amplify": "^5.0.22",
     "react": "18.2.0",
-    "react-native": "0.71.5"
+    "react-native": "0.71.5",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-url-polyfill": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
