--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/netinfo": "^9.3.7",
+    "amazon-cognito-identity-js": "^6.2.0",
     "aws-amplify": "^5.0.22",
+    "core-js": "^3.29.1",
     "react": "18.2.0",
     "react-native": "0.71.5"
   },
